welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: unclosed character literal
		return '7:00'
                       ^alarmClock:5: error: unclosed character literal
		return '7:00'
                            ^alarmClock:11: error: unclosed character literal
			return '10:00'
                               ^alarmClock:11: error: unclosed character literal
			return '10:00'
                                     ^alarmClock:17: error: unclosed character literal
				return '10:00'
                                       ^alarmClock:17: error: unclosed character literal
				return '10:00'
                                             ^alarmClock:23: error: unclosed character literal
			return 'off'
                                   ^